[package]
name = "git-file-url"
version = "0.1.0"
authors = ["Nicolas Bouliol <cheuveux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.12"
anyhow = "1.0.35"
structopt = "0.3.21"
clap = "2.33.3"
